# aurex

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  default.profraw
.github/workflows/: ci.yml
axon/: CMakeLists.txt  Makefile  nex.ax  nex.cpp  scanner.cpp  scanner.hpp
axon/examples/: Nexfile.example
axon/fixtures/: dlist.ax  simple.ax  with_imports.ax
axon/include/nex/: cache.hpp  config.hpp  digest.hpp  error.hpp  executor.hpp  graph.hpp  scanner.hpp
axon/nex/: scan.ax
axon/src/: cache.cpp  config.cpp  digest.cpp  executor.cpp  graph.cpp  main.cpp  scanner.cpp
bootstrap/: Makefile  aurex_bootstrap.cpp  m0_bootstrap.cpp
cmake/: AurexBackendAurora.cmake  AurexBackendLLVM.cmake  AurexBase.cmake  AurexCodegenC.cmake  AurexDriver.cmake  AurexFrontend.cmake  AurexIr.cmake  AurexLLVM.cmake  AurexMacro.cmake  AurexPipelineStage.cmake  AurexProject.cmake  AurexQuery.cmake  AurexSema.cmake  AurexSyntax.cmake  AurexTestSources.cmake  AurexTests.cmake  AurexTooling.cmake  AurexTools.cmake  AurexWarnings.cmake
docs/: ARCHITECTURE.zh.md  C_BACKEND_DESIGN.md  DESIGN.en.md  DESIGN.zh.md  M0V0.1.1.md  M0V0.1.2.md  M0V0.1.3.md  M0V0.1.4.md  M0V0.1.5.md  M0V0.1.6.md  M0V0.1.7.md  M0V0.1.8.md  README.md  SELFHOST.md  SEMANTICS.md  USAGE.en.md  USAGE.zh.md
docs/compiler/: lexer-performance.md  parser-architecture.md
docs/en/: README.md  api.md  architecture.md  implementation.md  introduction.md  m2.5-roadmap.md  m3-roadmap.md  m3.1-generics-plan.md  m3.2-query-backed-sema-plan.md  m3.3-tooling-incremental-plan.md  m3.4-real-incremental-sema-plan.md  m3.5-incremental-syntax-stable-ast-plan.md  m3.6-project-graph-persistent-query-db-plan.md  m3.7-ide-semantic-features-plan.md  m3.8-query-backed-lowering-backend-reuse-plan.md  m3.9-m3-release-baseline.md  m4-release-baseline.md  m4-roadmap.md  m4-trait-protocol-system-design.md  m5-default-trait-methods-design.md  m5-release-baseline.md  m5-roadmap.md  m6-resource-access-semantics-design.md  m6-roadmap.md  next-steps.md  progress.md  requirements.md  runtime-flow.md  std-api-design.md  usage.md  version.md
docs/review/: AUREX_M2_修复方案.md  AUREX_M2_完整报告.md  aurex_m6_full_audit_report_v2.md  aurex_m6_full_audit_report_v2_source_recheck.md  aurex_m7_design_three_round_review.md
docs/spec/: m2_grammar.md  m2_syntax_matrix.md  m2_unsupported.md
docs/zh/: README.md  api.md  architecture.md  aurex-module-system-m3-design.md  aurex-module-system-m3-example.md  basic-syntax-foundation-review.md  bug-hunt-report-2026-05-07.md  class-trait-composition-background.md  implementation.md  introduction.md  language-feature-inventory.md  language-manual.md  language-syntax-and-design-review.md  m1-progress-2026-05-07.md  m10-release-baseline.md  m10-supertrait-upcasting-design.md  m11-advanced-dyn-design.md  m11-release-baseline.md  m12-release-baseline.md  m13-advanced-dyn-design.md  m14-borrowed-dyn-view-path-release.md  m15-advanced-dyn-const-generic-design.md  m16-const-generic-check-only-release.md  m17-dyn-ownership-runtime-prep-release.md  m18-dyn-ownership-runtime-boundary-hardening-release.md  m19-dyn-ownership-runtime-ir-verifier-prep-release.md  m2.5-query-key-design.md  m2.5-refactor-cleanup-design.md  m2.5-roadmap.md  m20-default-named-arguments-release.md  m20-owned-dyn-drop-allocator-identity-release.md  m20-owned-dyn-ir-shape-prototype-release.md  m20-owned-dyn-runtime-admission-gate-release.md  m20-owned-dyn-runtime-lowering-abi-design-release.md  m21-macro-system-design-gate.md  m21b-attribute-token-tree-surface.md  m21c-early-item-macro-expansion-plan.md  m21d-noop-early-item-expansion-boundary.md  m21e-generated-module-part-parse-merge-stub-contract.md  m21f-hygiene-source-map-debug-trace-stub-contract.md  (+68 more)
examples/: README.md  diagnostic_showcase.ax  hello.ax  regex_advanced.ax  regex_demo.ax  regex_industrial.ax  regex_phase1.ax  regex_stress.ax  regex_suite.ax
runtime/: c.ax  file.ax  mem.ax  text.ax
selfhost/: Makefile  README.md
selfhost/runtime/: runtime.c
selfhost/src/: README.md  lexer_dump.ax  lexer_file.ax  m0c_seed.ax  m0c_stage1.ax
src/base/: bump_allocator.cpp  diagnostic.cpp  source.cpp  string_literal.cpp  text.cpp
src/cli/: lsp_main.cpp  main.cpp
src/codegen_c/: c_emitter.cpp  c_type.cpp  expr_order.cpp
src/driver/: aurora_codegen_backend.cpp  backend_pipeline.cpp  backend_pipeline.hpp  cli.cpp  cli_llvm.cpp  codegen_backend.cpp  compilation_pipeline.cpp  compilation_pipeline.hpp  compilation_session.cpp  compilation_session.hpp  compiler.cpp  diagnostic_renderer.cpp  file_cache.cpp  frontend_pipeline.cpp  frontend_pipeline.hpp  incremental_cache.cpp  llvm_codegen_backend.cpp  lowering_pipeline.cpp  lowering_pipeline.hpp  module_loader.cpp  module_loader_remap.cpp  module_loader_remap.hpp  module_loader_support.cpp  module_loader_support.hpp  native_toolchain.cpp  package_identity.cpp  pipeline_stage.cpp  pipeline_stage.hpp  profile.cpp  project_model.cpp  standard_library.cpp  stub_codegen_backend.cpp
src/ir/: analysis_manager.cpp  enum_layout.cpp  ir.cpp  ir_dump.cpp  ir_fingerprint.cpp  llvm_emit.cpp  llvm_emit_function.cpp  llvm_emit_internal.hpp  llvm_emit_module.cpp  llvm_emit_types.cpp  llvm_emit_util.cpp  llvm_emit_value.cpp  lower_ast.cpp  lower_ast_expr.cpp  lower_ast_internal.hpp  lower_ast_match.cpp  lower_ast_stmt.cpp  pass_manager.cpp  pass_pipeline.cpp  verify.cpp
src/lex/: char_class.hpp  keyword.cpp  keyword.hpp  (+8 more)
std/: args.ax  c.ax  file.ax  host.ax  io.ax  mem.ax  native_support.c  process.ax  text.ax
tests/: aurex_integration_tests.cpp
tools/: ast_stress.py  bench.py  bootstrap_chain.sh  check_coverage.sh  check_golden.sh  check_perf_redlines.py  compare_backends.sh  compare_selfhost_lexer.sh  diagnostic_stress.py  format_check.py  frontend_bench.cpp  frontend_compare.py  frontend_compare_bench.cpp  generic_stress.py  lex_bench.cpp  m7_hardening_perf.py  perf_report.py  perf_thresholds.py  pipeline_demo.sh  query_graph_fuzz.py  query_pruning_gate.py  regex_differential.py  run_gtest_cases.sh  run_tests.sh  test_aurora.sh
(+2032 files in other folders)
