cmake_minimum_required(VERSION 3.24)

if(NOT DEFINED CMAKE_C_COMPILER)
    set(CMAKE_C_COMPILER clang CACHE FILEPATH "C compiler")
endif()
if(NOT DEFINED CMAKE_CXX_COMPILER)
    set(CMAKE_CXX_COMPILER clang++ CACHE FILEPATH "CXX compiler")
endif()

project(aurex LANGUAGES C CXX)

option(AUREX_ENABLE_COVERAGE "Build Aurex with LLVM source-based coverage instrumentation" OFF)
option(AUREX_ENABLE_SANITIZERS "Build Aurex with address and undefined-behavior sanitizers" OFF)
option(AUREX_BUILD_FUZZERS "Build Aurex libFuzzer targets" OFF)
option(AUREX_BUILD_BENCHMARKS "Build Aurex Google Benchmark targets" OFF)
option(AUREX_ENABLE_REGEX_CONFORMANCE "Register the slow regex differential conformance CTest entry" OFF)
option(AUREX_FRONTEND_ONLY "Build only frontend libraries and frontend tests without LLVM, IR, driver, or CLI targets" OFF)
set(AUREX_ENABLE_LTO_DEFAULT OFF)
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(AUREX_ENABLE_LTO_DEFAULT ON)
endif()
option(AUREX_ENABLE_LTO "Build Aurex targets with interprocedural/link-time optimization" ${AUREX_ENABLE_LTO_DEFAULT})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

if(AUREX_ENABLE_LTO)
    include(CheckIPOSupported)
    check_ipo_supported(RESULT AUREX_IPO_SUPPORTED OUTPUT AUREX_IPO_ERROR LANGUAGES C CXX)
    if(NOT AUREX_IPO_SUPPORTED)
        message(FATAL_ERROR "AUREX_ENABLE_LTO requested but IPO/LTO is not supported: ${AUREX_IPO_ERROR}")
    endif()
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
endif()

if(AUREX_ENABLE_COVERAGE)
    if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        message(FATAL_ERROR "AUREX_ENABLE_COVERAGE requires Clang/LLVM for llvm-cov instrumentation")
    endif()
    add_compile_options(-O0 -g -fprofile-instr-generate -fcoverage-mapping)
    add_link_options(-fprofile-instr-generate -fcoverage-mapping)
endif()

if(AUREX_ENABLE_SANITIZERS)
    if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
        message(FATAL_ERROR "AUREX_ENABLE_SANITIZERS requires Clang or GCC")
    endif()
    add_compile_options(-g -fno-omit-frame-pointer -fsanitize=address,undefined)
    add_link_options(-fsanitize=address,undefined)
endif()

include(cmake/AurexWarnings.cmake)
include(cmake/AurexBase.cmake)
include(cmake/AurexQuery.cmake)
include(cmake/AurexProject.cmake)
include(cmake/AurexSyntax.cmake)
include(cmake/AurexFrontend.cmake)
include(cmake/AurexSema.cmake)
include(cmake/AurexPipelineStage.cmake)
include(cmake/AurexTooling.cmake)
if(NOT AUREX_FRONTEND_ONLY)
    include(cmake/AurexLLVM.cmake)
    include(cmake/AurexIr.cmake)
    include(cmake/AurexBackendLLVM.cmake)
    include(cmake/AurexDriver.cmake)
    include(cmake/AurexTools.cmake)
endif()
include(cmake/AurexTests.cmake)

if(MSVC)
    target_compile_options(aurex_base PRIVATE /W4)
else()
    set(AUREX_WARNING_TARGETS
        aurex_base
        aurex_query
        aurex_project
        aurex_syntax
        aurex_lex
        aurex_parse
        aurex_sema
        aurex_pipeline_stage
        aurex_tooling
    )
    if(TARGET aurex_ir)
        list(APPEND AUREX_WARNING_TARGETS aurex_ir)
    endif()
    if(TARGET aurex_backend_llvm)
        list(APPEND AUREX_WARNING_TARGETS aurex_backend_llvm)
    endif()
    if(TARGET aurex_driver)
        list(APPEND AUREX_WARNING_TARGETS aurex_driver)
    endif()
    if(TARGET aurex_driver_llvm)
        list(APPEND AUREX_WARNING_TARGETS aurex_driver_llvm)
    endif()
    if(TARGET aurexc)
        list(APPEND AUREX_WARNING_TARGETS aurexc)
    endif()
    if(TARGET aurex_lex_bench)
        list(APPEND AUREX_WARNING_TARGETS aurex_lex_bench)
    endif()
    if(TARGET aurex_frontend_bench)
        list(APPEND AUREX_WARNING_TARGETS aurex_frontend_bench)
    endif()
    if(TARGET aurex_frontend_compare_bench)
        list(APPEND AUREX_WARNING_TARGETS aurex_frontend_compare_bench)
    endif()
    if(TARGET aurex_tests)
        list(APPEND AUREX_WARNING_TARGETS aurex_tests)
    endif()
    if(TARGET aurex_base_tests)
        list(APPEND AUREX_WARNING_TARGETS aurex_base_tests)
    endif()
    if(TARGET aurex_query_tests)
        list(APPEND AUREX_WARNING_TARGETS aurex_query_tests)
    endif()
    if(TARGET aurex_lexer_tests)
        list(APPEND AUREX_WARNING_TARGETS aurex_lexer_tests)
    endif()
    if(TARGET aurex_frontend_tests)
        list(APPEND AUREX_WARNING_TARGETS aurex_frontend_tests)
    endif()
    aurex_enable_warnings(${AUREX_WARNING_TARGETS})
endif()

add_custom_target(coverage
    COMMAND "${CMAKE_SOURCE_DIR}/tools/check_coverage.sh"
    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
    USES_TERMINAL
)
